--- a/CurriculumLanda.html
+++ b/CurriculumLanda.html
@@ -46,7 +46,7 @@
                               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Information
                                </button>
                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <a class="dropdown-item" href="MiPerfil.html"">Profile</a>
+                                <a class="dropdown-item" href="MiPerfil.html">Profile</a>
                                  <a class="dropdown-item" href ="MiExperiencia.html">Experince</a>
                                
                                 </div>
@@ -70,7 +70,7 @@
 
 
 					<div class="page-header">
-                          <div class"container">
+                          <div class="container">
                            
                        <div id="text">
                            <p>  
